--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "lint": "eslint --ext .js .",
     "lint:fix": "eslint --ext .js --fix .",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "pretty-quick": "pretty-quick --staged"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
@@ -37,10 +34,6 @@
     "rebass": "^4.0.7"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.9",
-    "@storybook/addon-links": "^5.3.9",
-    "@storybook/addons": "^5.3.9",
-    "@storybook/react": "^5.3.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "babel-eslint": "^10.0.3",
@@ -55,11 +48,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "husky": "^3.1.0",
     "jest": "^24.9.0",
     "jest-emotion": "^10.0.27",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "pretty-quick": "^1.11.1"
+    "prettier": "^1.19.1"
   }
 }
