--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "16.9.0",
     "react-icons": "^3.8.0",
     "react-modal": "^3.11.1",
+    "react-multi-carousel": "^2.5.0",
     "rebass": "^4.0.7"
   },
   "devDependencies": {
