--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:fix": "eslint --ext .js --fix .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
