--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "emotion-theming": "^10.0.27",
     "next": "9.0.5",
     "next-images": "^1.3.0",
+    "next-seo": "^4.0.0",
     "polished": "^3.4.3",
     "react": "16.9.0",
     "react-dom": "16.9.0",
