--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build ./",
     "start": "next start -p $PORT",
     "lint": "eslint --ext .js .",
     "lint:fix": "eslint --ext .js --fix .",
@@ -28,16 +29,17 @@
     }
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "@babel/core": "^7.8.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "@next/bundle-analyzer": "^9.2.1",
     "@types/react-modal": "^3.10.4",
     "@types/rebass": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
