--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@emotion/styled": "^10.0.27",
     "@next/bundle-analyzer": "^9.2.1",
     "@types/react-modal": "^3.10.4",
+    "@types/react-text-mask": "^5.4.6",
     "@types/rebass": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
@@ -46,16 +47,20 @@
     "babel-plugin-emotion": "^10.0.27",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
+    "i": "^0.3.6",
     "next": "9.0.5",
     "next-images": "^1.3.0",
     "next-seo": "^4.0.0",
+    "npm": "^6.13.7",
     "polished": "^3.4.3",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-icons": "^3.8.0",
     "react-modal": "^3.11.1",
     "react-multi-carousel": "^2.5.0",
-    "rebass": "^4.0.7"
+    "react-text-mask": "^5.4.3",
+    "rebass": "^4.0.7",
+    "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
