--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@next/bundle-analyzer": "^9.2.1",
     "@types/react-modal": "^3.10.4",
     "@types/react-text-mask": "^5.4.6",
+    "@types/react-visibility-sensor": "^5.0.1",
     "@types/rebass": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
