[test] Update tests.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,13 +18,6 @@
     "noImplicitThis": true,
     "noImplicitReturns": true
   },
-  "exclude": [
-    "node_modules",
-    "out",
-    "build",
-    ".vscode",
-    "__mocks__/",
-    "dist/",
-  ],
+  "exclude": ["node_modules", "out", "build", ".vscode", "__mocks__/", "dist/"],
   "include": ["**/*.ts", "**/*.tsx"]
 }
