--- a/package.json
+++ b/package.json
@@ -20,39 +20,25 @@
     "test:watch": "jest --watch",
     "heroku-postbuild": "npm run build",
     "type-check-watch": "tsc -p ./ --watch",
-    "type-check": "tsc -p ./",
-    "pretty-quick": "pretty-quick --staged"
+    "type-check": "tsc -p ./"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all pretty-quick type-check test"
+      "pre-commit": "npm-run-all lint type-check test"
     }
   },
   "dependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@next/bundle-analyzer": "^9.2.1",
-    "@types/react-modal": "^3.10.4",
-    "@types/react-text-mask": "^5.4.6",
-    "@types/react-visibility-sensor": "^5.0.1",
-    "@types/rebass": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
     "axios": "^0.19.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.27",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
     "i": "^0.3.6",
-    "next": "9.0.5",
+    "next": "^9.0.5",
     "next-images": "^1.3.0",
     "next-seo": "^4.0.0",
-    "npm": "^6.13.7",
     "polished": "^3.4.3",
     "react": "16.9.0",
     "react-dom": "16.9.0",
@@ -65,10 +51,22 @@
     "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
+    "@types/react-modal": "^3.10.4",
+    "@types/react-text-mask": "^5.4.6",
+    "@types/react-visibility-sensor": "^5.0.1",
+    "@types/rebass": "^4.0.4",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "^10.0.27",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-react-app": "^5.1.0",
@@ -81,9 +79,8 @@
     "husky": "^3.0.5",
     "jest": "^24.9.0",
     "jest-emotion": "^10.0.27",
-    "prettier": "^1.19.1",
     "npm-run-all": "^4.1.5",
-    "pretty-quick": "^1.11.1",
+    "prettier": "^1.19.1",
     "typescript": "^3.7.5"
   }
 }
