[feat]  update project

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build": "next build",
     "build:analyze": "ANALYZE=true next build ./",
     "start": "next start -p $PORT",
-    "lint": "eslint --ext .js .",
-    "lint:fix": "eslint --ext .js --fix .",
+    "lint": "eslint --ext .tsx,.ts,.js .",
+    "lint:fix": "eslint --ext .tsx,.ts,.js --fix .",
     "test": "jest",
     "test:watch": "jest --watch",
     "heroku-postbuild": "npm run build",
