--- a/package.json
+++ b/package.json
@@ -30,48 +30,49 @@
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@emotion/core": "^10.0.27",
+    "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@next/bundle-analyzer": "^9.2.1",
-    "@storybook/addon-actions": "^5.3.13",
-    "@storybook/addon-links": "^5.3.13",
-    "@storybook/react": "^5.3.13",
+    "@next/bundle-analyzer": "^9.2.2",
+    "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-links": "^5.3.14",
+    "@storybook/react": "^5.3.14",
     "axios": "^0.19.0",
     "babel-preset-react-app": "^9.1.1",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
     "i": "^0.3.6",
-    "next": "^9.0.5",
-    "next-images": "^1.3.0",
-    "next-seo": "^4.0.0",
+    "next": "^9.2.2",
+    "next-images": "^1.3.1",
+    "next-seo": "^4.4.0",
     "polished": "^3.4.3",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-icons": "^3.8.0",
-    "react-modal": "^3.11.1",
+    "react-modal": "^3.11.2",
     "react-multi-carousel": "^2.5.0",
+    "react-player": "^1.15.2",
     "react-text-mask": "^5.4.3",
     "react-visibility-sensor": "^5.1.1",
     "rebass": "^4.0.7",
     "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@types/node": "^13.7.0",
-    "@types/react": "^16.9.19",
-    "@types/react-modal": "^3.10.4",
+    "@testing-library/react": "^9.5.0",
+    "@types/node": "^13.9.0",
+    "@types/react": "^16.9.23",
+    "@types/react-modal": "^3.10.5",
     "@types/react-text-mask": "^5.4.6",
     "@types/react-visibility-sensor": "^5.0.1",
     "@types/rebass": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "babel-eslint": "^10.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.27",
+    "babel-plugin-emotion": "^10.0.29",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-react-app": "^5.1.0",
@@ -79,13 +80,13 @@
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
     "jest-emotion": "^10.0.27",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   }
 }
