--- a/package.json
+++ b/package.json
@@ -12,80 +12,77 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "build:analyze": "ANALYZE=true next build ./",
     "start": "next start -p $PORT",
     "lint": "eslint --ext .tsx,.ts,.js .",
     "lint:fix": "eslint --ext .tsx,.ts,.js --fix .",
     "test": "jest",
     "test:watch": "jest --watch",
     "heroku-postbuild": "npm run build",
-    "type-check-watch": "tsc -p ./ --watch",
+    "type-check:watch": "tsc -p ./ --watch",
     "type-check": "tsc -p ./",
     "storybook": "start-storybook -s ./public -p 9001"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all lint type-check test"
+      "pre-commit": "npm run lint && npm run type-check && npm run test"
     }
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@next/bundle-analyzer": "^9.2.2",
-    "@storybook/addon-actions": "^5.3.14",
-    "@storybook/addon-links": "^5.3.14",
-    "@storybook/react": "^5.3.14",
+    "@next/bundle-analyzer": "^9.3.3",
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/react": "^5.3.17",
     "axios": "^0.19.0",
-    "babel-preset-react-app": "^9.1.1",
+    "babel-preset-react-app": "^9.1.2",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
-    "i": "^0.3.6",
-    "next": "^9.2.2",
-    "next-images": "^1.3.1",
+    "next": "^9.3.3",
+    "next-images": "^1.4.0",
     "next-seo": "^4.4.0",
-    "polished": "^3.4.3",
+    "polished": "^3.5.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-icons": "^3.8.0",
     "react-modal": "^3.11.2",
-    "react-multi-carousel": "^2.5.0",
-    "react-player": "^1.15.2",
+    "react-multi-carousel": "^2.5.3",
+    "react-player": "^1.15.3",
     "react-text-mask": "^5.4.3",
     "react-visibility-sensor": "^5.1.1",
     "rebass": "^4.0.7",
     "text-mask-addons": "^3.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "@types/node": "^13.9.0",
-    "@types/react": "^16.9.23",
+    "@types/node": "^13.9.5",
+    "@types/react": "^16.9.27",
     "@types/react-modal": "^3.10.5",
     "@types/react-text-mask": "^5.4.6",
     "@types/react-visibility-sensor": "^5.0.1",
     "@types/rebass": "^4.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-jest": "^25.2.4",
+    "babel-loader": "^8.1.0",
     "babel-plugin-emotion": "^10.0.29",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-config-react-app": "^5.1.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
-    "jest-emotion": "^10.0.27",
-    "npm-run-all": "^4.1.5",
+    "jest-emotion": "^10.0.32",
     "prettier": "^1.19.1",
     "typescript": "^3.8.3"
   }
