--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "build:analyze": "ANALYZE=true next build ./",
     "start": "next start -p $PORT",
     "lint": "eslint --ext .tsx,.ts,.js .",
     "lint:fix": "eslint --ext .tsx,.ts,.js --fix .",
     "test": "jest",
     "test:watch": "jest --watch",
     "heroku-postbuild": "npm run build",
-    "type-check-watch": "tsc -p ./ --watch",
+    "type-check:watch": "tsc -p ./ --watch",
     "type-check": "tsc -p ./",
     "storybook": "start-storybook -s ./public -p 9001"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all lint type-check test"
+      "pre-commit": "npm run lint && npm run type-check && npm run test"
     }
   },
   "dependencies": {
@@ -36,11 +35,11 @@
     "@storybook/addon-actions": "^5.3.13",
     "@storybook/addon-links": "^5.3.13",
     "@storybook/react": "^5.3.13",
+    "@types/jest": "^25.1.4",
     "axios": "^0.19.0",
     "babel-preset-react-app": "^9.1.1",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.27",
-    "i": "^0.3.6",
     "next": "^9.0.5",
     "next-images": "^1.3.0",
     "next-seo": "^4.0.0",
@@ -83,9 +82,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
-    "jest-emotion": "^10.0.27",
-    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   }
 }
